--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
 itertools = "0.13.0"
+lazy_static = "1.5.0"
 once_cell = "1.20.2"
+rstest = "0.23.0"
 sorted-vec = "0.8.5"
